--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "5.0.0",
+    "npm": "3.7.5"
+  },
   "scripts": {
-    "start": "brunch watch --server",
-    "prod": "brunch build --production"
+    "start": "node_modules/bin/brunch watch --server",
+    "prod": "node_modules/bin/brunch watch build --production"
   },
   "dependencies": {
     "react": "~0.14.7",
