--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "Add brunch to rails with Sprockets",
   "main": "./app/assets/js/components.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "./node_modules/brunch/bin/brunch watch --server",
+    "prod": "./node_modules/brunch/bin/brunch watch build --production"
   },
   "engines": {
     "node": "5.0.0",
     "npm": "3.7.5"
   },
-  "scripts": {
-    "start": "node_modules/bin/brunch watch --server",
-    "prod": "node_modules/bin/brunch watch build --production"
-  },
   "dependencies": {
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.5.0",
+    "jquery": "^2.2.3",
+    "jquery-ujs": "^1.2.1",
     "react": "~0.14.7",
     "react-dom": "~0.14.7"
   },
